--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 # Generated from rasterwindow.pro.
 
 cmake_minimum_required(VERSION 3.16)
-project(qtlearning LANGUAGES CXX)
+project(opencv_learning LANGUAGES CXX)
 
-
-add_subdirectory(myproject)
+add_subdirectory(opencv_learning/introduction_to_opencv)
