--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@
 cmake_minimum_required(VERSION 3.16)
 project(opencv_learning LANGUAGES CXX)
 
-add_subdirectory(opencv_learning/introduction_to_opencv/1)
-add_subdirectory(opencv_learning/introduction_to_opencv/2)
+# 两个都是基本的图形读写
+add_subdirectory(opencv_learning/1_introduction_to_opencv/1)
+add_subdirectory(opencv_learning/1_introduction_to_opencv/2)
+
+
+add_subdirectory(opencv_learning/2_core_functionality/1_mat_basic_container/1)
+
