🦄 refactor: 修复bug和名字过长的问题

--- a/opencv_learning/2_core_functionality/2_imagescan_lookuptables_timemesure/1/CMakeLists.txt
+++ b/opencv_learning/2_core_functionality/2_imagescan_lookuptables_timemesure/1/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project( 2_2_imagescan_lookuptables_timemesure_1_Efficient_way)
+project( 2_2_1_Efficient_way)
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( ${PROJECT_NAME} main.cpp )
